--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "link": "lerna exec yarn link",
     "publish:master": "lerna publish --conventional-commits --cd-version=prerelease --yes --independent --npm-tag=unstable --preid=unstable --message 'chore(release): Publish [ci skip]' --exact",
     "publish:beta": "lerna publish --conventional-commits --cd-version=prerelease --yes --independent --npm-tag=beta --preid=beta --message 'chore(release): Publish [ci skip]' --exact",
-    "publish:release": "lerna publish --conventional-commits --yes --independent --message 'chore(release): Publish [ci skip]'"
+    "publish:release": "lerna publish --conventional-commits --yes --independent --message 'chore(release): Publish [ci skip]'",
+    "storybook": "start-storybook -p 6007",
+    "build-storybook": "build-storybook"
   },
   "pre-commit": [
     "pre-commit"
@@ -37,8 +39,14 @@
   },
   "homepage": "https://aws-amplify.github.io/",
   "devDependencies": {
+    "@storybook/addon-knobs": "^5.0.11",
+    "@storybook/addon-viewport": "^5.0.11",
+    "@storybook/react": "^5.0.11",
     "@types/jest": "^20.0.7",
     "@types/node": "^8.9.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-react-app": "^9.0.0",
     "codecov": "^1.0.1",
     "compression-webpack-plugin": "^1.1.3",
     "cypress": "^3.2.0",
@@ -46,6 +54,7 @@
     "json-loader": "^0.5.7",
     "lerna": "2.11.0",
     "pre-commit": "^1.2.2",
+    "react": "^16.8.6",
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.1",
     "ts-jest": "^22.0.0",
